2006-06-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2792]
	* elf/dl-deps.c (expand_dst): Rename __cnt variable to not
	conflict with DL_DST_REQUIRED.

2006-06-16  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_subr.c (nis_getnames): Fix the implementation to better
	match what Solaris does.

2006-06-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/spawni.c (__spawni): Use local_seteuid and
	local_setegid instead of seteuid and setegid.
	* sysdeps/generic/local-setxid.h: New file.
	* sysdeps/unix/sysv/linux/local-setxid.h: New file.

	* sysdeps/posix/spawni.c (__spawni): Use non-cancelable interfaces.

	* string/Makefile (tests): Add bug-envz1.
	* string/bug-envz1.c: New file.

2006-06-02  Jakub Jelinek  <jakub@redhat.com>

	* posix/regex_internal.c (re_string_skip_chars): If no character has
	been converted at all, set *last_wc to WEOF.  If mbrtowc failed, set wc
	to the byte which couldn't be converted.
	(re_string_reconstruct): Don't clear valid_raw_len before calling
	re_string_skip_chars.  If wc is WEOF after re_string_skip_chars, set
	tip_context using re_string_context_at.
	* posix/Makefile: Add rules to build and run bug-regex25 test.
	* posix/bug-regex25.c: New test.

2006-06-02  Ryan S. Arnold  <rsa@us.ibm.com>

	[BZ #2703]
	* string/envz.c (envz_strip): Correct erroneously reversed src
	and dest parameters to memmove() invocation.

2006-05-30  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd.h (prune_cache): Add fd argument to prototype.
	* nscd/nscd.c (parse_opt): Read response from INVALIDATE request
	to make sure the database has been already invalidated.
	* nscd/cache.c (prune_cache): Add fd argument.  Write response to fd
	after the cache has been invalidated.  Use pthread_mutex_lock rather
	than pthread_mutex_trylock if fd != -1.
	* nscd/connections.c (invalidate_cache): Add fd argument, write
	response to fd if not calling prune_cache, pass fd to prune_cache.
	(handle_request): Adjust invalidate_cache caller.